<resources>
    <string name="app_name">Tujar</string>
    <string name="title_closed_alert">Marker Closed</string>
    <string name="title_closed_alert_now">Now</string>
    <string name="desc_closed_alert"> closed but you can continue your order and will send to you when market opens on </string>
    <string name="continue_closed_alert">Continue</string>
    <string name="cencel_closed_alert">Cancel</string>
    <string name="order_id_view">#%1$d</string>
    <string name="egp">EGP</string>
    <string name="min_order_error">Total Order Price is less than Min Order Value</string>
    <string name="price">%1$s EGP</string>
    <string name="price2">%1$s EGP</string>
    <string name="time">%1$s</string>
    <string name="cart_empty">Your Cart is Empty. You cannot checkout now</string>
    <string name="order_submitted_successfully">Order Submitted Successfully</string>
    <string name="order_submitted_failed"> Failed to Submit Order. Please try again later</string>
    <string name="total_order">Total Order</string>
    <string name="place_order">Place Order</string>
    <string name="error_empty_address">Please Insert your Address</string>
    <string name="error_empty_contact">Please Insert your Contact Number</string>
    <string name="alert_to_add_to_cart">سيؤدي اضافة هذا المنتج الى ازالة المنتجات الموجودة بالسلة</string>
    <string name="alert_to_add_to_cart_sure">متأكد</string>
    <string name="alert_to_add_to_cart_cancel">إلغاء</string>
    <string name="product_added_to_cart">Product has been added to cart successfully</string>
    <string name="pricess">EGP</string>
    <string name="facebook_application_id">365161161498405</string>
    <string name="facebook_login_protocol_scheme">fb365161161498405</string>
    <string name="delete">حذف</string>
    <string name="finaltotal">Final Total</string>
    <string name="quantity">Quantity</string>
    <string name="carttitle">My Cart</string>
    <string name="totalreceipt">Total Receipt</string>
    <string name="deliveryfeesval">Delivery Fees</string>
    <string name="paynow">Pay Now</string>
    <string name="addresstitle">Address</string>
    <string name="enter_you_address">Enter You Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_you_number">Enter You Number</string>
    <string name="notestitle">Notes</string>
    <string name="enter_you_notes">Enter You notes</string>
    <string name="enter_promocode">Enter promocode</string>
    <string name="promocode">PromoCode</string>
    <string name="compeleteval">Continue</string>
    <string name="cashval">Cash</string>
    <string name="text_your_review">text your review</string>
    <string name="ratebtn">Rate us</string>
    <string name="start_chat">Start Conversation</string>
    <string name="replywithin5">Replies Withoin 5 minutes</string>
    <string name="last_chat">cONTINUE Conversation</string>
    <string name="cartpage">My Cart</string>
    <string name="dialy_offers">Today\'s Surprise</string>
    <string name="fav_title">My Favourites</string>
    <string name="profile_title">My Profile</string>
    <string name="shareapp">Share App</string>
    <string name="oldorders">Last Orders</string>
    <string name="whoareu">About Us</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="loginfirstly">you must Login firstly</string>
    <string name="contactus">Contact Us</string>
    <string name="appnametitle">Tujar Company</string>
    <string name="whowe">Who are we?</string>
    <string name="guid1">وريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبو أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد أكسير سيتاشن يللأمكو لابورأس نيسي يت أليكيوب أكس أيا كوممودو كونسيكيوات . ديواس</string>
    <string name="chat">Chat</string>
    <string name="merchantname">Merchant Name</string>
    <string name="workinghour">Working Hours</string>
    <string name="ratemerchant">Rate Shop</string>
    <string name="paymethod">Payment Method: </string>
    <string name="_20_le">20 LE</string>
    <string name="_1000_points">1000 Points</string>
    <string name="_50_le">50 LE</string>
    <string name="_2500_points">2500 Points</string>
    <string name="_100_le">100 LE</string>
    <string name="_5000_points">5000 Points</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="newval">New</string>
    <string name="wallettitle">My Wallet</string>
    <string name="market_title_info">Shop Info</string>
    <string name="profile_title_info">Personal Info</string>
    <string name="points_title">Points</string>
    <string name="search">Search</string>
    <string name="whatsshow">What\'s you are search?</string>
    <string name="compelete_info">Please Compelete Info</string>
    <string name="user_name">User Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_merchant">Enter Market Name</string>
    <string name="specialist">Enter Address Here</string>
    <string name="special_title">Product\'s type</string>
    <string name="save">Save</string>
    <string name="list_types">Category List</string>
    <string name="count_markets">Markets Count</string>
    <string name="count_orrders">Orders Count</string>
    <string name="choose_color">Choose Color:</string>
</resources>
