<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/info_view"
    android:layoutDirection="rtl"
    android:padding="30sp"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/tugar_logo"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/gray"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:layout_marginBottom="20sp"
        android:text="@string/compelete_info"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/user_name"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@null"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:id="@+id/username"
        android:padding="5sp"
        android:hint="@string/enter_name"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/merchantname"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@null"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:id="@+id/marketname"
        android:hint="@string/enter_merchant"
        android:padding="5sp"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/addresstitle"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@null"
        android:padding="5sp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:id="@+id/marketaddress"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:gravity="right"
        android:hint="@string/enter_you_address"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/special_title"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@null"
        android:padding="5sp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:id="@+id/specialist"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:gravity="right"
        android:hint="@string/specialist"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="رقم الهاتف"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@null"
        android:padding="5sp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:id="@+id/phone_number"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:hint="01xxxxxxxx"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="12sp"
        android:id="@+id/btn"
        app:cardBackgroundColor = "@color/colorPrimaryDark"
        android:layout_width="200sp"
        android:layout_marginBottom="10dp"
        android:layout_height="44sp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            android:text="@string/save"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>