<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/blue_background"
        android:gravity="center"
        android:layout_height="200sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/cash_icon"
                android:alpha="0.1"

                android:id="@+id/leftImage"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="-70dp"
                android:layout_height="match_parent"/>
            <ImageView
                android:src="@drawable/visa_icon"
                android:layout_width="match_parent"
                android:id="@+id/CenterImage"

                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <ImageView
                android:src="@drawable/visadelivery"
                android:layout_width="match_parent"
                android:alpha="0.1"
                android:layout_marginEnd="-70dp"
                android:id="@+id/RightImage"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="26dp"
            android:id="@+id/TitlePay"
            android:text="@string/cashval"
            android:layout_marginTop="10sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/leftSelected"
                android:src="@drawable/gray_icon"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginStart="5sp"
                android:id="@+id/CenterSelected"
                android:src="@drawable/green_icon"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginStart="5sp"
                android:id="@+id/RightSelected"
                android:src="@drawable/gray_icon"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/addresstitle"
        android:textColor="@color/white_color"
        android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:hint="@string/enter_you_address"
            android:id="@+id/maddress"
            android:background="@null"
            android:textSize="14dp"
            android:textColorHint="@color/white_color"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@color/colorPrimaryDarkDark"
            android:layout_height="0.5sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/phone_number"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:minHeight="30dp"
            android:hint="@string/enter_you_number"
            android:id="@+id/tv_delivery_contact"
            android:background="@null"
            android:textSize="14dp"
            android:textColorHint="@color/white_color"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@color/colorPrimaryDarkDark"
            android:layout_height="0.5sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/notestitle"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:hint="@string/enter_you_notes"
            android:background="@null"
            android:textSize="14dp"
            android:id="@+id/customer_note"
            android:textColorHint="@color/white_color"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@color/colorPrimaryDarkDark"
            android:layout_height="0.5sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/promocode"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:minHeight="30dp"
            android:hint="@string/enter_promocode"
            android:background="@null"
            android:textSize="14dp"
            android:id="@+id/promocode"
            android:textColorHint="@color/white_color"
            android:textColor="@color/white_color"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="@color/colorPrimaryDarkDark"
            android:layout_height="0.5sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="85dp"
                    android:id="@+id/shop_image"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:background="@drawable/border_labany"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:id="@+id/market_id"
                    android:text="مؤسسة تجار"
                    android:textColor="@color/white_color"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/hour_checkout"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:id="@+id/delivery_time"
                    android:text="1 Hour"
                    android:textColor="@color/white_color"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/total_checkout"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:id="@+id/tv_checkout_total_price"
                    android:text="1000 L.E."
                    android:textColor="@color/white_color"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:id="@+id/btn_place_Order"
            android:layout_gravity="center"
            android:text="@string/compeleteval"
            android:textColor="@color/white_color"
            android:background="@drawable/background_green"
            android:layout_height="45dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>