<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/info_view"
    android:padding="30sp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/merchantname"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:text="لا يوجد"
        android:id="@+id/market_name"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/addresstitle"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:text="لا يوجد"
        android:id="@+id/MarketAddress"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/phone_number"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:id="@+id/market_phone"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:text="لا يوجد"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
</LinearLayout>