<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/info_view"
    android:gravity="center|top"
    android:padding="30sp"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="wrap_content"
       android:orientation="vertical"
       android:gravity="center"
       android:background="@drawable/points_icon_background"
       android:layout_height="wrap_content">
       <ImageView
           android:layout_width="wrap_content"
           android:src="@drawable/points_icon"
           android:layout_height="wrap_content"/>
       <TextView
           android:layout_width="wrap_content"
           android:textColor="@color/black"
           android:layout_marginTop="5sp"
           android:layout_marginBottom="5sp"
           android:textSize="18dp"
           android:text="نقاطي"
           android:layout_height="wrap_content"/>
       <TextView
           android:layout_width="wrap_content"
           android:textColor="@color/colorPrimaryDark"
           android:textStyle="bold"
           android:layout_marginTop="5sp"
           android:id="@+id/total_points"
           android:layout_marginBottom="5sp"
           android:textSize="23dp"
           android:text="0"
           android:layout_height="wrap_content"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:id="@+id/firstrow"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundyellow_leftcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_20_le"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundblue_rightcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_1000_points"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:id="@+id/secondrow"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundyellow_leftcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_50_le"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundblue_rightcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_2500_points"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:id="@+id/thirdrow"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundyellow_leftcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_100_le"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backgroundblue_rightcorner"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/_5000_points"
                android:textColor="@color/white_color"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"/>

</LinearLayout>