<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/info_view"
    android:padding="30sp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/addresstitle"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="5sp"
        android:id="@+id/address"
        android:layout_marginBottom="10sp"
        android:text="14 شارع عباس العقاد"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/phone_number"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:id="@+id/phone"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:text="01279436889"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="@string/wallettitle"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:id="@+id/wallet"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:text="5am - 9pm"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1sp"/>
</LinearLayout>